// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField should render a InputField with props 1`] = `
<Field
  alignLabel="top"
  error="Text"
  errorIcon={
    <IconHelp
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help="Help"
  hideRequired={true}
  htmlFor="test-input"
  isInline={true}
  isInvalid={true}
  isLabelHidden={true}
  isLegendHidden={false}
  label="Label Test"
  labelAttrs={
    Object {
      "className": "label",
    }
  }
  required={false}
  showOptional={true}
>
  <Input
    aria-describedby="test-input-error test-input-help"
    defaultValue="Value"
    disabled={false}
    id="test-input"
    isInvalid={false}
    name="test"
    onChange={[Function]}
    refCallback={[Function]}
    required={false}
    type="number"
    value="Value"
  />
</Field>
`;

exports[`InputField should render a InputField with type specified by type attribute when both type attribute and InputAttributes are given 1`] = `
<Field
  alignLabel="top"
  error="Text"
  errorIcon={
    <IconHelp
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help="Help"
  hideRequired={true}
  htmlFor="test-input"
  isInline={true}
  isInvalid={true}
  isLabelHidden={true}
  isLegendHidden={false}
  label="Label Test"
  labelAttrs={
    Object {
      "className": "label",
    }
  }
  required={false}
  showOptional={true}
>
  <Input
    aria-describedby="test-input-error test-input-help"
    defaultValue="Value"
    disabled={false}
    id="test-input"
    isInvalid={false}
    name="test"
    onChange={[Function]}
    refCallback={[Function]}
    required={false}
    type="Text"
    value="Value"
  />
</Field>
`;

exports[`InputField should render a InputField with type specified through InputAttributes 1`] = `
<Field
  alignLabel="top"
  error="Text"
  errorIcon={
    <IconHelp
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help="Help"
  hideRequired={true}
  htmlFor="test-input"
  isInline={true}
  isInvalid={true}
  isLabelHidden={true}
  isLegendHidden={false}
  label="Label Test"
  labelAttrs={
    Object {
      "className": "label",
    }
  }
  required={false}
  showOptional={true}
>
  <Input
    aria-describedby="test-input-error test-input-help"
    defaultValue="Value"
    disabled={false}
    id="test-input"
    isInvalid={false}
    name="test"
    onChange={[Function]}
    refCallback={[Function]}
    required={false}
    type="number"
    value="Value"
  />
</Field>
`;

exports[`InputField should render a default InputField component 1`] = `
<Field
  alignLabel="top"
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  htmlFor="test-input"
  isInline={false}
  isInvalid={false}
  isLabelHidden={false}
  isLegendHidden={false}
  label="Label"
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Input
    disabled={false}
    id="test-input"
    isInvalid={false}
    name={null}
    required={false}
  />
</Field>
`;

exports[`InputField should render a disabled InputField component 1`] = `
<Field
  alignLabel="top"
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  htmlFor="test-input"
  isInline={false}
  isInvalid={false}
  isLabelHidden={false}
  isLegendHidden={false}
  label="Label"
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Input
    disabled={true}
    id="test-input"
    isInvalid={false}
    name={null}
    required={false}
  />
</Field>
`;

exports[`InputField should render a disabled InputField component via inputAttrs 1`] = `
<Field
  alignLabel="top"
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  htmlFor="test-input"
  isInline={false}
  isInvalid={false}
  isLabelHidden={false}
  isLegendHidden={false}
  label="Label"
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Input
    disabled={true}
    id="test-input"
    isInvalid={false}
    name={null}
    required={false}
  />
</Field>
`;

exports[`InputField should render a placeholder within the InputField component 1`] = `
<Field
  alignLabel="top"
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  htmlFor="test-input"
  isInline={false}
  isInvalid={false}
  isLabelHidden={false}
  isLegendHidden={false}
  label="Label"
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Input
    disabled={false}
    id="test-input"
    isInvalid={false}
    name={null}
    placeholder="Placeholder"
    required={false}
  />
</Field>
`;

exports[`InputField should render a placeholder within the InputField component when passed as an input attribute 1`] = `
<Field
  alignLabel="top"
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  htmlFor="test-input"
  isInline={false}
  isInvalid={false}
  isLabelHidden={false}
  isLegendHidden={false}
  label="Label"
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Input
    disabled={false}
    id="test-input"
    isInvalid={false}
    name={null}
    placeholder="Placeholder"
    required={false}
  />
</Field>
`;

exports[`InputField should render a valid InputField with props 1`] = `
<Field
  alignLabel="top"
  error="Text"
  errorIcon={
    <IconHelp
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help="Help"
  hideRequired={true}
  htmlFor="test-input"
  isInline={true}
  isInvalid={false}
  isLabelHidden={true}
  isLegendHidden={false}
  label="Label Test"
  labelAttrs={
    Object {
      "className": "label",
    }
  }
  required={false}
  showOptional={true}
>
  <Input
    aria-describedby="test-input-help"
    defaultValue="Value"
    disabled={false}
    id="test-input"
    isInvalid={false}
    name="test"
    onChange={[Function]}
    refCallback={[Function]}
    required={false}
    type="number"
    value="Value"
  />
</Field>
`;
